--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Handlee&family=Patrick+Hand+SC&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&family=Source+Sans+Pro:wght@400;600;700&display=swap"
 			rel="stylesheet"
 		/>
 		<title>React App</title>
